# epsi_br_bot

epsi-2023-br/: CMakeLists.txt  README.md  bots.txt
epsi-2023-br/src/: main.cpp  test.cpp
epsi-2023-br/src/battleroyale/: Action.cpp  ActionAttack.cpp  ActionMove.cpp  ActionRespe.cpp  Arena.cpp  BattleRoyale.cpp  Fighter.cpp  FighterBot.cpp  log.cpp
epsi-2023-br/src/battleroyale/headers/: Action.h  ActionAttack.h  ActionMove.h  ActionRespe.h  Arena.h  BattleRoyale.h  Fighter.h  FighterBot.h  log.h
epsi-2023-br/src/fighters/: Dumb.cpp  Ghislain.cpp  Humain.cpp  Matteo.cpp
epsi-2023-br/src/fighters/headers/: Dumb.h  Ghislain.h  Humain.h  Matteo.h
